Adds spindle-token user guides

--- a/docs/carduus/guides/databricks.ipynb
+++ b/docs/carduus/guides/databricks.ipynb
@@ -15,11 +15,11 @@
     }
    },
    "source": [
-    "# Spindle-token Databricks Getting Started Guide\n",
+    "# Carduus Databricks Getting Started Guide\n",
     "\n",
-    "Spindle-token is an implementation of the Open Privacy Preserving Record Linkage (OPPRL) specification. It allows organizations to replace personally identifiable information (PII) with encrypted tokens that can be used to correlate data records pertaining to the same subject while keeping the subject anonymous.\n",
+    "Carduus is an implementation of the Open Privacy Preserving Record Linkage (OPPRL) specification. It allows organizations to replace personally identifiable information (PII) with encrypted tokens that can be used to correlate data records pertaining to the same subject while keeping the subject anonymous.\n",
     "\n",
-    "This notebook demonstrates the use of the `spindle-token` python package in databricks to parallelize the tokenization processes using Spark clusters.\n",
+    "This notebook demonstrates the use of the `carduus` python package in databricks to parallelize the tokenization processes using Spark clusters.\n",
     "\n",
     "The following is a 5 row sample dataset of PII that will be tokenized. Notice that despite cosmetic differences the first 2 rows (label = 1) are describing the same subject and will receive the same sets of token values."
    ]
@@ -189,12 +189,12 @@
     "\n",
     "See the [Databricks documenation](https://docs.databricks.com/en/security/secrets/index.html) for managing secrets to get started. You will need an to install the [Databricks CLI](https://docs.databricks.com/en/dev-tools/cli/index.html) and [authenticate](https://docs.databricks.com/en/dev-tools/cli/authentication.html) as a user that can manage Databricks secrets.\n",
     "\n",
-    "Create a secret scope for `spindle-token` encryption keys by running the following command with the Databricks CLI.\n",
+    "Create a secret scope for `carduus` encryption keys by running the following command with the Databricks CLI.\n",
     "\n",
     "<br>\n",
     "\n",
     "```\n",
-    "databricks secrets create-scope spindle-token\n",
+    "databricks secrets create-scope carduus\n",
     "```\n",
     "\n",
     "Add your private key as a secret in the `carduus` scope.\n",
@@ -207,7 +207,7 @@
     "...\n",
     "-----END PRIVATE KEY-----\n",
     "EOF\n",
-    ") | databricks secrets put-secret spindle-token PrivateKey\n",
+    ") | databricks secrets put-secret carduus PrivateKey\n",
     "```\n",
     "\n",
     "Add the secrets for the public keys of the third party organizations you will be sending and receiving tokenized data to/from.\n",
@@ -220,7 +220,7 @@
     "...\n",
     "-----END PUBLIC KEY-----\n",
     "EOF\n",
-    ") | databricks secrets put-secret spindle-token MyPartnerPublicKey\n",
+    ") | databricks secrets put-secret carduus MyPartnerPublicKey\n",
     "```"
    ]
   },
@@ -248,8 +248,8 @@
     "To configure your Databricks compute such that your encryption keys will be available as environment variables, use the following syntax in the Databricks Compute configuration UI. See the Databricks documentation on [Environment Variables](https://docs.databricks.com/aws/en/compute/configure#environment-variables) for more information.\n",
     "\n",
     "```\n",
-    "SPINDLE_TOKEN_PRIVATE_KEY={{secrets/spindle-token/PrivateKey}}\n",
-    "SPINDLE_TOKEN_RECIPIENT_PUBLIC_KEY={{secrets/spindle-token/MyPartnerPublicKey}}\n",
+    "SPINDLE_TOKEN_PRIVATE_KEY={{secrets/carduus/PrivateKey}}\n",
+    "SPINDLE_TOKEN_RECIPIENT_PUBLIC_KEY={{secrets/carduus/MyPartnerPublicKey}}\n",
     "```"
    ]
   },
@@ -268,9 +268,9 @@
     }
    },
    "source": [
-    "# Install spindle-token\n",
+    "# Install carduus\n",
     "\n",
-    "You can install `spindle-token` on your cluster, or within the notebook. See the [Databricks docs](https://docs.databricks.com/en/libraries/notebooks-python-libraries.html) for more information."
+    "You can install `carduus` on your cluster, or within the notebook. See the [Databricks docs](https://docs.databricks.com/en/libraries/notebooks-python-libraries.html) for more information."
    ]
   },
   {
@@ -290,7 +290,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install spindle-token"
+    "%pip install carduus"
    ]
   },
   {
@@ -474,19 +474,18 @@
     }
    ],
    "source": [
-    "from spindle_token import tokenize\n",
-    "from spindle_token.opprl.v1 import OpprlV1\n",
+    "from carduus.token import tokenize, OpprlPii, OpprlToken\n",
     "\n",
     "tokens = tokenize(\n",
     "    pii,\n",
-    "    col_mapping={\n",
-    "        OpprlV1.first_name: \"first_name\",\n",
-    "        OpprlV1.last_name: \"last_name\",\n",
-    "        OpprlV1.gender: \"gender\",\n",
-    "        OpprlV1.birth_date: \"birth_date\",\n",
-    "    },\n",
-    "    tokens=[OpprlV1.token1, OpprlV1.token2, OpprlV1.token3],\n",
-    "    private_key=dbutils.secrets.getBytes(\"spindle-token\", \"PrivateKey\"),\n",
+    "    pii_transforms=dict(\n",
+    "        first_name=OpprlPii.first_name,\n",
+    "        last_name=OpprlPii.last_name,\n",
+    "        gender=OpprlPii.gender,\n",
+    "        birth_date=OpprlPii.birth_date,\n",
+    "    ),\n",
+    "    tokens=[OpprlToken.token1, OpprlToken.token2, OpprlToken.token3],\n",
+    "    private_key=dbutils.secrets.getBytes(\"carduus\", \"PrivateKey\"),\n",
     ")\n",
     "display(tokens)"
    ]
@@ -506,11 +505,13 @@
     }
    },
    "source": [
-    "# Transcode Tokens As Sender\n",
+    "# Transcrypt Tokens As Sender\n",
+    "\n",
+    "> trans- (*latin: across*) -crypt (*greek: hidden, secret*) \n",
     "\n",
     "The OPPRL specification also provides procedures for facilitating the safe transfer of data between trusted parties without a secure connection.\n",
     "\n",
-    "The process of **transcoding** will re-encrypt of data from one scheme to another without reversing to the original PII or emitting any intermediate values. When the sender transcodes their tokens, the token values of the records no longer match to the sender's data and records within the data being shared no longer match with eachother regardless of the underlying PII. The tokens produced by the sender with `transcode_out` are called **ephemeral tokens**.\n",
+    "The process of **Transcryption** is the re-encrypting of data from one scheme to another without reversing the initial encryption to recover the PII. When the sender transcrypts their tokens, the token values of the records no longer match to the sender's data and records within the data being shared no longer match with eachother regardless of the underlying PII.\n",
     "\n",
     "Notice that the first 2 records pertaining to the same subject (label = 1) no longer have identical tokens."
    ]
@@ -648,16 +649,15 @@
     }
    ],
    "source": [
-    "from spindle_token import transcode_out\n",
-    "from spindle_token.opprl.v1 import OpprlV1\n",
+    "from carduus.token import transcrypt_out\n",
     "\n",
-    "ephemeral_tokens = transcode_out(\n",
+    "tokens_to_send = transcrypt_out(\n",
     "    tokens, \n",
-    "    tokens=(OpprlV1.token1, OpprlV1.token2, OpprlV1.token3), \n",
-    "    recipient_public_key=dbutils.secrets.getBytes(\"spindle-token\", \"MyPartnerPublicKey\"),\n",
-    "    private_key=dbutils.secrets.getBytes(\"spindle-token\", \"PrivateKey\"),\n",
+    "    token_columns=(\"opprl_token_1\", \"opprl_token_2\", \"opprl_token_3\"), \n",
+    "    recipient_public_key=dbutils.secrets.getBytes(\"carduus\", \"MyPartnerPublicKey\"),\n",
+    "    private_key=dbutils.secrets.getBytes(\"carduus\", \"PrivateKey\"),\n",
     ").drop(\"first_name\", \"last_name\", \"birth_date\")\n",
-    "display(ephemeral_tokens)"
+    "display(tokens_to_send)"
    ]
   },
   {
@@ -675,11 +675,11 @@
     }
    },
    "source": [
-    "# Transcode Tokens As Recipient\n",
+    "# Transcrypt Tokens As Recipient\n",
     "\n",
-    "When receiving the data with t tokens, the recipient must call a function to transcode the tokens again so that they match with the rest of the tokens across their data assets.\n",
+    "When receiving the data with transcrypted tokens, the recipient must call a function to re-encrypt the tokens again so that they match with the rest of the tokens across their data assets.\n",
     "\n",
-    "For this demonstration, we will load the encryption key our hypothetical recipient and process the ephemeral tokens we created above.\n",
+    "For this demonstration, we will load the encryption key our hypothetical recipient and process the transcrypted tokens we created above.\n",
     "\n",
     "Notice that the first 2 records pertaining to the same subject (label = 1) have identical tokens again, but do these tokens are not the same as the original tokens because they are encrypted with the scheme for the recipient."
    ]
@@ -820,9 +820,9 @@
     "from carduus.token import transcrypt_in\n",
     "\n",
     "tokens2 = transcrypt_in(\n",
-    "    ephemeral_tokens, \n",
-    "    tokens=(OpprlV1.token1, OpprlV1.token2, OpprlV1.token3), \n",
-    "    private_key=dbutils.secrets.getBytes(\"spindle-token\", \"PrivateKey\"),\n",
+    "    tokens_to_send, \n",
+    "    token_columns=(\"opprl_token_1\", \"opprl_token_2\", \"opprl_token_3\"),\n",
+    "    private_key=dbutils.secrets.getBytes(\"carduus\", \"OrgBPrivateKey\"),\n",
     ")\n",
     "display(tokens2)"
    ]
