Finishes top-level docs and automatic API docs

--- a/docs/guides/databricks.ipynb
+++ b/docs/guides/databricks.ipynb
@@ -197,7 +197,7 @@
     "databricks secrets create-scope spindle-token\n",
     "```\n",
     "\n",
-    "Add your private key as a secret in the `carduus` scope.\n",
+    "Add your private key as a secret in the `spindle-token` scope.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -241,7 +241,7 @@
    "source": [
     "# Optional Databricks Compute Setup\n",
     "\n",
-    "Users can provide encryption keys to Carduus via programmatic access to Databricks secrets (via `dbutils`) or by setting specific environment variables to take the value from Databricks secrets. See the Databricks [secrets documentation](https://docs.databricks.com/aws/en/security/secrets/secrets-spark-conf-env-var#reference-a-secret-in-an-environment-variable) for more information.\n",
+    "Users can provide encryption keys to spindle-token via programmatic access to Databricks secrets (via `dbutils`) or by setting specific environment variables to take the value from Databricks secrets. See the Databricks [secrets documentation](https://docs.databricks.com/aws/en/security/secrets/secrets-spark-conf-env-var#reference-a-secret-in-an-environment-variable) for more information.\n",
     "\n",
     "Users who wish to use programmatic access via `dbutils` don't need any cluster configuration and can skip the remainder of this section.\n",
     "\n",
